
28 Feb 2019
* GUI become disfunctional under Windows 10. This was resolved by changing the GUI construction from using https://au.mathworks.com/matlabcentral/fileexchange/27758-gui-layout-toolbox to https://au.mathworks.com/matlabcentral/fileexchange/47982-gui-layout-toolbox
* The code for GUI construction (https://au.mathworks.com/matlabcentral/fileexchange/47982-gui-layout-toolbox) has been removed from the package. For those running HydroSight from within Matlab, the user must now install the toolbox from the prior link.

5 April 2019
* Mex file for Windows OS (forcingTransform_soilMoisture.mexa64) added.
* Error message for missing above file shortened to be visible within the GUI. 
* GUI on Windows 10 can be incorrectly built. In an attempt to reslove this, HydroSight.m tries to use the Matlab add-on "GUI Layout Toolbox" but only if installed.
* Bug fixed. Starting a new project now allows the constrcution table to have >0 rows.
* Version number updated

16 April 2019
* Bug fixed in listing TFN weighting input data types. 

9 May 2019
* Bug fixed in forward and backward data preparation which cases this feature to fail
* Bug fixed in editing outlier points which caused the plot to no longer be displayed.

29 May 2019
* Bug fixed that caused the GUI to not open in matlab 2018b+. Importantly, when using 2018b+ the plot zoom etc tools now appear within the plot, not within the toolbar (see GitHub issue #40).
* Bug fixed that caused the Pearson's fucntion lag time to the peak weighting to be incorrect (see GitHub issue #41).
* Slider added that allows efficient changing of the GUI table the width (see GitHub issue #42).
* Bug fixed that caused duplicate site ID names within the coordinates file to cause an unhandled errors (see GitHub issue #43).
* GUI left hand panels changed to fixed height panels.
* The function which loads the GUI now reports unhandled errors (Hydrosight.m).
* The name of the tab 'Date Preparation' has been changed to 'Outlier Removal'